[gd_scene load_steps=11 format=3 uid="uid://bxvffh8mwonxk"]

[ext_resource type="PackedScene" uid="uid://bpl6leftyh1w3" path="res://player_edit.tscn" id="1_bvjfb"]
[ext_resource type="Script" path="res://room_select.gd" id="2_yhdah"]
[ext_resource type="Script" path="res://player_add.gd" id="3_6iq7j"]
[ext_resource type="Script" path="res://room_saver.gd" id="3_nikrk"]
[ext_resource type="Script" path="res://clues_label.gd" id="5_2gmcg"]

[sub_resource type="Theme" id="Theme_fl8y2"]
default_font_size = 24

[sub_resource type="Animation" id="Animation_q001i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:offset_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CluesLabel:offset_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScrollContainer:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xy2qv"]
resource_name = "start_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:offset_bottom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-100, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CluesLabel:offset_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScrollContainer:anchor_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 0.25]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Title:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CluesLabel:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScrollContainer:modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_opmwu"]
_data = {
"RESET": SubResource("Animation_q001i"),
"start_up": SubResource("Animation_xy2qv")
}

[sub_resource type="LabelSettings" id="LabelSettings_pdkv7"]
font_size = 48

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fl8y2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start_up"
libraries = {
"": SubResource("AnimationLibrary_opmwu")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.196078, 0.286275, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.2
offset_left = -185.5
offset_right = 185.5
grow_horizontal = 2
grow_vertical = 2
text = "Clues Calculator"
label_settings = SubResource("LabelSettings_pdkv7")
horizontal_alignment = 1
vertical_alignment = 2

[node name="CluesLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_right = 88.0
grow_horizontal = 2
grow_vertical = 0
text = "Clues: 0"
label_settings = SubResource("LabelSettings_pdkv7")
script = ExtResource("5_2gmcg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerEntries" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoomSelect" type="OptionButton" parent="ScrollContainer/MarginContainer/PlayerEntries"]
layout_mode = 2
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0
script = ExtResource("2_yhdah")

[node name="RoomSaver" type="HSplitContainer" parent="ScrollContainer/MarginContainer/PlayerEntries"]
unique_name_in_owner = true
layout_mode = 2
split_offset = 175
dragger_visibility = 1
script = ExtResource("3_nikrk")

[node name="RoomSave" type="Button" parent="ScrollContainer/MarginContainer/PlayerEntries/RoomSaver"]
layout_mode = 2
text = "Save"

[node name="RoomLoad" type="Button" parent="ScrollContainer/MarginContainer/PlayerEntries/RoomSaver"]
layout_mode = 2
text = "Load"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/PlayerEntries"]
layout_mode = 2

[node name="PlayerEdit" parent="ScrollContainer/MarginContainer/PlayerEntries" instance=ExtResource("1_bvjfb")]
layout_mode = 2

[node name="PlayerAdd" type="Button" parent="ScrollContainer/MarginContainer/PlayerEntries"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "+"
script = ExtResource("3_6iq7j")
player_edit = ExtResource("1_bvjfb")
